// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #3926a5 !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-radius: 4px;
  color: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7467c0 0px 0px 0px 3px,rgba(67,90,111,0.14) 0px 0px 0px 1px inset,rgba(67,90,111,0.3) 0px -1px 1px 0px inset !important;
}

.c5[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c5:hover {
  background-color: #efefef;
}

.c5:hover:active {
  background-color: #e3e3e3;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:first-child):not(:last-child),
.c3 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c3 > *:first-child,
.c3 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c3 > *:last-child,
.c3 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c2 > * {
  border-radius: 4px;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c1"
    role="group"
  >
    <div
      class="c4"
      color="white"
      style="color: white; padding: 0.5rem 1rem;"
    >
      Hello
    </div>
    <button
      class="c5 c6"
      style="size: default;"
      type="default"
    >
      <span>
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`renders correctly for a responsive group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #3926a5 !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-radius: 4px;
  color: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7467c0 0px 0px 0px 3px,rgba(67,90,111,0.14) 0px 0px 0px 1px inset,rgba(67,90,111,0.3) 0px -1px 1px 0px inset !important;
}

.c5[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c5:hover {
  background-color: #efefef;
}

.c5:hover:active {
  background-color: #e3e3e3;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:first-child):not(:last-child),
.c3 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
}

.c3 > *:first-child,
.c3 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
}

.c3 > *:last-child,
.c3 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
}

.c2 > * {
  border-radius: 4px;
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:769px) {
  .c3 > *:not(:first-child):not(:last-child),
  .c3 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
    border-left-width: 0;
  }
}

@media (max-width:768px) {
  .c3 > *:not(:first-child):not(:last-child),
  .c3 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
    border-top-width: 0;
  }
}

@media (min-width:769px) {
  .c3 > *:first-child,
  .c3 > *:first-child .GroupItem-sc-2orogz-0 {
    border-top-right-radius: 0;
  }
}

@media (max-width:768px) {
  .c3 > *:first-child,
  .c3 > *:first-child .GroupItem-sc-2orogz-0 {
    border-bottom-left-radius: 0;
  }
}

@media (min-width:769px) {
  .c3 > *:last-child,
  .c3 > *:last-child .GroupItem-sc-2orogz-0 {
    border-left-width: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:768px) {
  .c3 > *:last-child,
  .c3 > *:last-child .GroupItem-sc-2orogz-0 {
    border-top-width: 0;
    border-top-right-radius: 0;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c1"
    role="group"
  >
    <div
      class="c4"
      color="white"
      style="color: white; padding: 0.5rem 1rem;"
    >
      Hello
    </div>
    <button
      class="c5 c6"
      style="size: default;"
      type="default"
    >
      <span>
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`renders correctly for a vertical group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #3926a5 !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-radius: 4px;
  color: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7467c0 0px 0px 0px 3px,rgba(67,90,111,0.14) 0px 0px 0px 1px inset,rgba(67,90,111,0.3) 0px -1px 1px 0px inset !important;
}

.c5[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c5:hover {
  background-color: #efefef;
}

.c5:hover:active {
  background-color: #e3e3e3;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > *:not(:first-child):not(:last-child),
.c3 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-top-width: 0;
}

.c3 > *:first-child,
.c3 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c3 > *:last-child,
.c3 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c2 > * {
  border-radius: 4px;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c1"
    role="group"
  >
    <div
      class="c4"
      color="white"
      style="color: white; padding: 0.5rem 1rem;"
    >
      Hello
    </div>
    <button
      class="c5 c6"
      style="size: default;"
      type="default"
    >
      <span>
        Send
      </span>
    </button>
  </div>
</div>
`;
